tests/type/good/overload-gen.py
def fun(y, x = ""):
    print(y + x)

fun(1, 2)
fun("test")
