tests/type/bad/function-bad-ret.py
def fun(x, y):
    return x + y

y = fun(1, "lol")
